@@ -91,6 +91,74 @@ class testViews(PloneMeetingTestCase):
         self.assertTrue(len(pmFolder.objectValues('MeetingItem')) == 1)
         self.assertTrue(pmFolder.objectValues('MeetingItem')[0].getId() == itemTemplate.getId)
 
+    def test_pm_CreateItemFromTemplate(self):
+        '''
+          Test the createItemFromTemplate functionnality triggered from the plonemeeting portlet.
+        '''
+        cfg = self.meetingConfig
+        self.changeUser('pmCreator1')
+        self.getMeetingFolder()
+        folder = getattr(self.portal.Members.pmCreator1.mymeetings, self.meetingConfig.getId())
+        itemTemplateView = folder.restrictedTraverse('createitemfromtemplate')
+        # the template we will use
+        itemTemplates = cfg.getItemTemplates(filtered=True)
+        itemTemplate = itemTemplates[0].getObject()
+        self.assertTrue(itemTemplate.portal_type == cfg.getItemTypeName(configType='MeetingItemTemplate'))
+        itemTemplateUID = itemTemplate.UID()
+        # for now, no items in the user folder
+        self.assertTrue(not folder.objectIds('MeetingItem'))
+        newItem = itemTemplateView.createItemFromTemplate(itemTemplateUID)
+        self.assertTrue(newItem.portal_type == cfg.getItemTypeName())
+        # the new item is the itemTemplate clone
+        self.assertTrue(newItem.Title() == itemTemplate.Title())
+        self.assertTrue(newItem.Description() == itemTemplate.Description())
+        self.assertTrue(newItem.getDecision() == itemTemplate.getDecision())
+        # and it has been created in the user folder
+        self.assertTrue(newItem.getId() in folder.objectIds())
+        # now check that the user can use a 'secret' item template if no proposing group is selected on it
+        self.changeUser('admin')
+        itemTemplate.setPrivacy('secret')
+        # an itemTemplate can have no proposingGroup, it does validate
+        itemTemplate.setProposingGroup('')
+        self.failIf(itemTemplate.validate_proposingGroup(''))
+        # use this template
+        self.changeUser('pmCreator1')
+        newItem2 = itemTemplateView.createItemFromTemplate(itemTemplateUID)
+        self.assertTrue(newItem2.portal_type == cfg.getItemTypeName())
+        # item has been created with a filled proposing group
+        # and privacy is still ok
+        self.assertTrue(newItem2.getId() in folder.objectIds())
+        userGroups = self.tool.getGroupsForUser(suffixes=['creators'])
+        self.assertTrue(newItem2.getProposingGroup() == userGroups[0].getId())
+        self.assertTrue(newItem2.getPrivacy() == itemTemplate.getPrivacy())
+
+    def test_pm_ItemTemplateDeletedIfFirstEditCancelled(self):
+        '''When creating an item from a template, if the user cancel first edition, the item is removed'''
+        cfg = self.meetingConfig
+        self.changeUser('pmCreator1')
+        pmFolder = self.getMeetingFolder()
+        view = pmFolder.restrictedTraverse('@@createitemfromtemplate')
+        itemTemplates = cfg.getItemTemplates(filtered=True)
+        itemTemplate = itemTemplates[0].getObject()
+        self.assertTrue(itemTemplate.portal_type == cfg.getItemTypeName(configType='MeetingItemTemplate'))
+        itemTemplateUID = itemTemplate.UID()
+
+        # if we cancel edit, the newItem is deleted
+        newItem = view.createItemFromTemplate(itemTemplateUID)
+        self.assertTrue(newItem._at_creation_flag)
+        newItem.restrictedTraverse('@@at_lifecycle_view').cancel_edit()
+        self.assertFalse(newItem.getId() in newItem.getParentNode().objectIds())
+
+        # but if item is saved, it is kept
+        newItem2 = view.createItemFromTemplate(itemTemplateUID)
+        self.assertTrue(newItem._at_creation_flag)
+        newItem2.processForm()
+        self.assertFalse(newItem2._at_creation_flag)
+        self.assertTrue(newItem.getId() in newItem.getParentNode().objectIds())
+        # cancel second edition
+        newItem2.restrictedTraverse('@@at_lifecycle_view').cancel_edit()
+        self.assertTrue(newItem.getId() in newItem.getParentNode().objectIds())
+
     def test_pm_ItemTemplatesWithSubFolders(self):
         '''Test when we have subFolders containing item templates in the configuration.'''
         cfg = self.meetingConfig
